fixed window jumping bug

--- a/assets/style.css
+++ b/assets/style.css
@@ -573,3 +573,10 @@ input:not([type=submit]), textarea {
     width: 93.39px;
     height: 17px;
 }
+
+#overlay {
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 77;
+}
